--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -84,8 +84,14 @@ body.page-home {
       .banner-text {
         padding: 64px 0 36px;
         color: color('cream');
-        p::before {
-          background-color: color('white');
+
+        p {
+          @include p1;
+          margin: 0;
+
+          &::before {
+            display: none;
+          }
         }
       }
 
@@ -100,7 +106,7 @@ body.page-home {
         position: relative;
 
         .banner-text {
-          padding: 104px 18px 131px 0;
+          padding: 60px 18px 96px 0;
         }
 
         .-background {
@@ -113,19 +119,11 @@ body.page-home {
           position: absolute;
         }
       }
-
-      @include media-lg {
-        .banner-text {
-          padding: 92px 72px 87px 0;
-        }
-      }
     }
   }
 
   .portfolio-section {
     .card-grid {
-      padding-bottom: 128px;
-
       @include media-md {
         padding-bottom: 80px;
         &::after {
@@ -152,29 +150,32 @@ body.page-home {
       }
     }
 
-    .portfolio-headline {
-      margin: 30px 0 94px;
+    .portfolio-text {
       color: color('teak');
+      padding-bottom: 64px;
 
       h4 {
         @include h3;
+        margin: 0 0 $padding-md;
+      }
+
+      p {
         margin: 0;
+        + p {
+          margin-top: $padding-sm;
+        }
       }
 
       @include media-md {
-        margin-top: 0;
-        margin-bottom: 30px;
-      }
-
-      @include media-lg {
-        padding-left: 54px;
-      }
-    }
-
-    .portfolio-intro {
-      @include media-md {
-        padding-top: 90px;
         padding-right: 72px;
+
+        h4 {
+          margin-bottom: 90px;
+        }
+
+        p + p {
+          margin-top: 64px;
+        }
       }
     }
   }
